--- a/locales/ga.csv
+++ b/locales/ga.csv
@@ -1,55 +1,55 @@
 Key,Text
 name,Gaeilge
-Welcome,Sábháil am trí níos mó ná clár amháin a shuiteáil ag an am céanna agus feabhsaigh feidhmíocht do Windows. Bí linn ag feabhsú an uirlis seo agus ag déanamh é níos fearr. Is féidir leat do chuid apps ceoil agus feabhsúcháin is fearr leat a chur leis freisin.
-installBtn,Suiteáil
-applyBtn,Cuir i bhfeidhm
-downloading,Ag suiteáil...
-about,Faoi
-thirdparty,Tríú páirtí
-preferences,Roghanna
-management,Bainistíocht
-apps,Aplaicí
-tweaks,Feabhsúcháin
-settings,Socruithe
-saveapps,Sábháil
-loadapps,Athchóirigh
-music,Ceol
-on,"Ar "
-off,Múchta
-diskmgr,Bainistíocht Diosca
-taskmgr,Bainisteoir Tascanna
-appsfeatures,Gnéithe Aipeanna
-networks,Líonraí
-services,Seirbhísí
-devicemgr,Bainisteoir Gléasanna
-PowerOptions,Roghanna Cumhachta
-sysinfo,Eolas Córas
-defaultTheme,Úsáid socrú an chórais
-ittlink,Cruthaigh gearrthagairt deisce
-reset,Athshocraigh Roghanna
-reopen,Oscail ITT arís le do thoil.
-theme,Téama
-language,Teanga
-mas,Scripteanna Gníomhachtaithe Microsoft (MAS)
-winoffice,Íoslódáil ISO Windows / Office
-idm,Gníomhachtú IDM
-extensions,Síntí Brabhsálaí
-all,Uile
-search,Cuardaigh
-restorepoint,Cruthaigh pointe athchóirithe
-chocoloc,Fillteán Íoslódálacha Inaistrithe
-InstallMessage,An bhfuil tú cinnte gur mhaith leat na feidhmchláir seo a shuiteáil
-ApplyMessage,An bhfuil tú cinnte gur mhaith leat na feabhsúcháin seo a chur i bhfeidhm
+Welcome,Sábháil am trí níos mó ná clár amháin a shuiteáil ag an am céanna agus feabhsaigh feidhmíocht do Windows. Bí linn ag feabhsú an uirlis seo agus ag déanamh é níos fearr. Is féidir leat do chuid Apps ceoil agus feabhsúcháin is fearr leat a chur leis freisin.
+Install,Suiteáil
+Apply,Cuir i bhfeidhm
+Downloading,Ag suiteáil...
+About,Faoi
+Third_party,Tríú páirtí
+Preferences,Roghanna
+Management,Bainistíocht
+Apps,Aplaicí
+Tweaks,Feabhsúcháin
+Settings,Socruithe
+Save,Sábháil
+Restore,Athchóirigh
+Music,Ceol
+On,"Ar "
+Off,Múchta
+Disk_Managment,Bainistíocht Diosca
+Task_Manager,Bainisteoir Tascanna
+Apps_features,Gnéithe Aipeanna
+Networks,LíOnraí
+Services,Seirbhísí
+Device_Manager,Bainisteoir Gléasanna
+Power_Options,Roghanna Cumhachta
+System_Info,Eolas Córas
+Use_system_setting,Úsáid socrú an chórais
+Create_desktop_shortcut,Cruthaigh gearrthagairt deisce
+Reset_preferences,Athshocraigh Roghanna
+Please_reopen_itt_again.,Oscail ITT arís le do thoil.
+Theme,Téama
+Language,Teanga
+MAS,Scripteanna Gníomhachtaithe Microsoft (MAS)
+Win_Office,Íoslódáil ISO Windows / Office
+IDM,Gníomhachtú IDM
+Browsers_extensions,Síntí Brabhsálaí
+All,Uile
+Search,Cuardaigh
+Create_restore_point,Cruthaigh pointe athchóirithe
+Portable_Downloads_Folder,Fillteán Íoslódálacha Inaistrithe
+Install_msg,An bhfuil tú cinnte gur mhaith leat na feidhmchláir seo a shuiteáil
+Apply_msg,An bhfuil tú cinnte gur mhaith leat na feabhsúcháin seo a chur i bhfeidhm
 Applying,Cur i bhfeidhm...
-choseapp,Roghnaigh ar a laghad aip amháin le suiteáil.
-chosetweak,Roghnaigh ar a laghad feabhsúchán amháin le cur i bhfeidhm.
-pleasewait,Fan le do thoil tá próiseas ag rith sa chúlra
-lastupdate,An nuashonrú deireanach
+App_empty_select,Roghnaigh ar a laghad aip amháin le suiteáil.
+Tweak_empty_select,Roghnaigh ar a laghad feabhsúchán amháin le cur i bhfeidhm.
+Please_wait,Fan le do thoil tá próiseas ag rith sa chúlra
+Last_update,An nuashOnrú deireanach
 sourcecode,Cód Foinse
-devby,Déanta le ♥ ag Emad Adel
-exit,An bhfuil tú cinnte gur mhaith leat an clár a dhúnadh? Má tá suiteálacha ar siúl beidh siad curtha ar ceal.
+Developed_By,Déanta le ♥ ag Emad Adel
+Exit_msg,An bhfuil tú cinnte gur mhaith leat an clár a dhúnadh? Má tá suiteálacha ar siúl beidh siad curtha ar ceal.
 watchdemo,Fáilte
-happybirthday,Breithlá Shona domsa!
-myplaylist,Is é mo Bhreithlá é agus Mo Phléaráca ♪
-OneAppReq,Roghnaigh ar a laghad aip amháin chun é a shábháil
+Happy_birthday,Breithlá ShOna domsa!
+My_playlist,Is é mo Bhreithlá é agus Mo Phléaráca ♪
+Empty_save_msg,Roghnaigh ar a laghad aip amháin chun é a shábháil
 syslang,Teanga an chórais
