--- a/locales/zh.csv
+++ b/locales/zh.csv
@@ -1,56 +1,56 @@
 Key,Text
 name,中文
 Welcome,通过一次安装多个程序节省时间并提升您的Windows性能。加入我们，改进工具，使其更加优秀。
-sysinfo,系统信息
-PowerOptions,电源选项
-devicemgr,设备管理器
-services,服务
-networks,网络
-appsfeatures,应用特性
-taskmgr,任务管理器
-diskmgr,磁盘管理
-installBtn,安装
-applyBtn,应用
-downloading,下载中
-about,关于
-thirdparty,第三方
-preferences,偏好
-management,管理
-apps,应用
-tweaks,调整
-settings,设置
-saveapps,保存选定应用
-loadapps,恢复选定应用
-music,音乐
-on,开启
-off,关闭
-reset,重置偏好设置
+System_Info,系统信息
+Power_Options,电源选项
+Device_Manager,设备管理器
+Services,服务
+Networks,网络
+Apps_features,应用特性
+Task_Manager,任务管理器
+Disk_Managment,磁盘管理
+Install,安装
+Apply,应用
+Downloading,下载中
+About,关于
+Third_party,第三方
+Preferences,偏好
+Management,管理
+Apps,应用
+Tweaks,调整
+Settings,设置
+Save,保存选定应用
+Restore,恢复选定应用
+Music,音乐
+On,开启
+Off,关闭
+Reset_preferences,重置偏好设置
 Dark,深色
 Light,浅色
-defaultTheme,系统
-ittlink,创建桌面快捷方式
-reopen,请重新打开ITT。
-theme,主题
-language,语言
-mas,Microsoft 激活脚本 (MAS)
-winoffice,下载 Windows / Office ISO
-idm,IDM 激活
-extensions,浏览器扩展
-all,都
-restorepoint,创建还原点
-chocoloc,便携下载文件夹
-InstallMessage,是否要安装选定的应用
-ApplyMessage,是否要应用选定的调整
-installing,安装中..
+Use_system_setting,系统
+Create_desktop_shortcut,创建桌面快捷方式
+Please_reopen_itt_again.,请重新打开ITT。
+Theme,主题
+Language,语言
+MAS,Microsoft 激活脚本 (MAS)
+Win_Office,下载 Windows / Office ISO
+IDM,IDM 激活
+Browsers_extensions,浏览器扩展
+All,都
+Create_restore_point,创建还原点
+Portable_Downloads_Folder,便携下载文件夹
+Install_msg,是否要安装选定的应用
+Apply_msg,是否要应用选定的调整
+instAlling,安装中..
 Applying,应用中..
-choseapp,请选择至少一款要安装的应用
-chosetweak,请等待调整应用完成
-pleasewait,请等待，后台有进程在进行中。
-lastupdate,最后更新
+App_empty_select,请选择至少一款要安装的应用
+Tweak_empty_select,请等待调整应用完成
+Please_wait,请等待，后台有进程在进行中。
+Last_update,最后更新
 sourcecode,源代码
-devby,由 Emad Adel ♥ 制作
-exit,您确定要关闭程序吗？如果有任何安装正在进行，它们将被终止。
+Developed_By,由 Emad Adel ♥ 制作
+Exit_msg,您确定要关闭程序吗？如果有任何安装正在进行，它们将被终止。
 watchdemo,欢迎
-happybirthday,生日快乐 Emad!
-myplaylist,这是我的生日和我的播放列表 ♪
+Happy_birthday,生日快乐 Emad!
+My_playlist,这是我的生日和我的播放列表 ♪
 syslang,系统语言
