--- a/locales/en.csv
+++ b/locales/en.csv
@@ -27,7 +27,7 @@ System_Info,System Info
 Use_system_setting,Use system setting
 Create_desktop_shortcut,Create desktop shortcut
 Reset_preferences,Reset_preferences Preferences
-Reopen_itt_again.,Please Please_reopen_itt_again. ITT again.
+Reopen_itt_again,Please reopen itt again.
 Theme,Theme
 Language,Language
 MAS,Microsoft ActivatiOn Scripts (MAS)
