--- a/locales/es.csv
+++ b/locales/es.csv
@@ -27,7 +27,7 @@ System_Info,Información del sistema
 Use_system_setting,Usar la cOnfiguración del sistema
 Create_desktop_shortcut,Crear acceso directo en el escritorio
 Reset_preferences,Restablecer preferencias
-Please_reopen_itt_again.,Vuelve a abrir ITT.
+Reopen_itt_again.,Vuelve a abrir ITT.
 Theme,Tema
 Language,Idioma
 MAS,Scripts de activación de Microsoft (MAS)
