--- a/locales/ga.csv
+++ b/locales/ga.csv
@@ -27,7 +27,7 @@ System_Info,Eolas Córas
 Use_system_setting,Úsáid socrú an chórais
 Create_desktop_shortcut,Cruthaigh gearrthagairt deisce
 Reset_preferences,Athshocraigh Roghanna
-Please_reopen_itt_again.,Oscail ITT arís le do thoil.
+Reopen_itt_again.,Oscail ITT arís le do thoil.
 Theme,Téama
 Language,Teanga
 MAS,Scripteanna Gníomhachtaithe Microsoft (MAS)
