--- a/locales/ko.csv
+++ b/locales/ko.csv
@@ -29,7 +29,7 @@ Dark,다크
 Light,라이트
 Use_system_setting,시스템
 Create_desktop_shortcut,바탕화면 바로 가기 만들기
-Please_reopen_itt_again.,ITT를 다시 열어주세요.
+Reopen_itt_again.,ITT를 다시 열어주세요.
 Theme,테마
 Language,언어
 MAS,Microsoft 활성화 스크립트 (MAS)
