--- a/locales/zh.csv
+++ b/locales/zh.csv
@@ -29,7 +29,7 @@ Dark,深色
 Light,浅色
 Use_system_setting,系统
 Create_desktop_shortcut,创建桌面快捷方式
-Please_reopen_itt_again.,请重新打开ITT。
+Reopen_itt_again.,请重新打开ITT。
 Theme,主题
 Language,语言
 MAS,Microsoft 激活脚本 (MAS)
