--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -11,8 +11,8 @@ Task_Manager,مدير المهام
 Disk_Managment,إدارة القرص
 Install,تثبيت
 Apply,تطبيق
-Downloading,جارٍ التثبيت
-About,عن المطور
+Downloading,...جارٍ التحميل
+About,عن الاداة
 Third_party,روابط خارجية
 Preferences,التفضيلات
 Management,إدارة الجهاز
@@ -28,13 +28,13 @@ Dark,ليلا
 Light,نهارا
 Use_system_setting,استخدم إعدادات النظام
 Create_desktop_shortcut,أنشاء أختصار على سطح المكتب
-Reset_preferences,الوضع الافتراضي
+Reset_preferences," إعادة الإعدادات إلى الوضع الافتراضي"
 reopen_itt_again.,يرجى اعادة فتح الاداة مرة اخرى
 Theme,المظهر
 Language,اللغة
 MAS,تفعيل الويندوز
-Win_Office,تنزيل ويندوز / أوفيس
-IDM,تفعيل الدون لود مانجر
+Win_Office,تحميل ويندوز / أوفيس
+IDM,تفعيل الدونلود مانجر
 Browsers_extensions,أضافات المتصفحات
 All,الكل
 Search,بحث
