--- a/locales/en.csv
+++ b/locales/en.csv
@@ -30,7 +30,7 @@ Reset_preferences,Reset_preferences Preferences
 Reopen_itt_again,Please reopen itt again.
 Theme,Theme
 Language,Language
-MAS,Microsoft ActivatiOn Scripts (MAS)
+MAS,Microsoft Activation Scripts (MAS)
 Win_Office,Download Windows / Office ISO
 IDM,IDM ActivatiOn
 Browsers_extensions,Browsers Browsers_extensions
