--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -28,7 +28,7 @@ Dark,ليلا
 Light,نهارا
 Use_system_setting,استخدم إعدادات النظام
 Create_desktop_shortcut,أنشاء أختصار على سطح المكتب
-Reset_preferences," إعادة الإعدادات إلى الوضع الافتراضي"
+Reset_preferences," إعادة التفضيلات إلى الوضع الافتراضي"
 reopen_itt_again.,يرجى اعادة فتح الاداة مرة اخرى
 Theme,المظهر
 Language,اللغة
