--- a/locales/en.csv
+++ b/locales/en.csv
@@ -33,7 +33,7 @@ Language,Language
 MAS,Microsoft Activation Scripts (MAS)
 Win_Office,Download Windows / Office ISO
 IDM,IDM ActivatiOn
-Browsers_extensions,Browsers Browsers_extensions
+Browsers_extensions,Browsers extensions
 All,All
 Search,Search
 Create_restore_point,Create a restore point
