--- a/locales/en.csv
+++ b/locales/en.csv
@@ -31,8 +31,8 @@ Reopen_itt_again,Please reopen itt again.
 Theme,Theme
 Language,Language
 MAS,Microsoft Activation Scripts (MAS)
-Win_Office,Download Windows / Office ISO
-IDM,IDM ActivatiOn
+Win_Office,Windows / Office ISO (MAS)
+IDM,IDM Activation (WindowsAddict)
 Browsers_extensions,Browsers extensions
 All,All
 Search,Search
