--- a/locales/en.csv
+++ b/locales/en.csv
@@ -1,6 +1,6 @@
 Key,Text
 name,English
-Welcome,Save time by instAlling multiple programs at Once and boost your Windows performance. Join us in improving this tool and making it better. You can also add your favorite Music  Apps  and Tweaks.
+Welcome,Save time by install multiple programs at Once and boost your Windows performance. Join us in improving this tool and making it better. You can also add your favorite Music  Apps  and Tweaks.
 Install,Install
 Apply,Apply
 Downloading,Downloading...
