--- a/locales/en.csv
+++ b/locales/en.csv
@@ -26,7 +26,7 @@ Power_Options,Power options
 System_Info,System Info
 Use_system_setting,Use system setting
 Create_desktop_shortcut,Create desktop shortcut
-Reset_preferences,Reset_preferences Preferences
+Reset_preferences,Reset Preferences
 Reopen_itt_again,Please reopen itt again.
 Theme,Theme
 Language,Language
