--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -29,7 +29,7 @@ Light,نهارا
 Use_system_setting,استخدم إعدادات النظام
 Create_desktop_shortcut,أنشاء أختصار على سطح المكتب
 Reset_preferences," إعادة التفضيلات إلى الوضع الافتراضي"
-reopen_itt_again.,يرجى اعادة فتح الاداة مرة اخرى
+Reopen_itt_again,يرجى اعادة فتح الاداة مرة اخرى
 Theme,المظهر
 Language,اللغة
 MAS,تفعيل الويندوز
